src/msg/msgParser.ts
// Generated from src/msg/msg.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { msgListener } from "./msgListener";
import { msgVisitor } from "./msgVisitor";


export class msgParser extends Parser {
	public static readonly TITLE = 1;
	public static readonly IDENT = 2;
	public static readonly PAGE = 3;
	public static readonly LITERAL = 4;
	public static readonly FACILITY = 5;
	public static readonly SEVERITY = 6;
	public static readonly BASE = 7;
	public static readonly END = 8;
	public static readonly PREFIX = 9;
	public static readonly SHARED = 10;
	public static readonly SYSTEM = 11;
	public static readonly FAOCOUNT = 12;
	public static readonly IDENTIFICATION = 13;
	public static readonly USERVALUE = 14;
	public static readonly SUCCESS = 15;
	public static readonly INFORMATIONAL = 16;
	public static readonly WARNING = 17;
	public static readonly ERROR = 18;
	public static readonly SEVERE = 19;
	public static readonly FATAL = 20;
	public static readonly WHITESPACE = 21;
	public static readonly NEWLINE = 22;
	public static readonly NAME = 23;
	public static readonly NUMBER = 24;
	public static readonly ASSIGN = 25;
	public static readonly ADD = 26;
	public static readonly SUB = 27;
	public static readonly MUL = 28;
	public static readonly DIV = 29;
	public static readonly SHIFT = 30;
	public static readonly SHARP = 31;
	public static readonly PERC = 32;
	public static readonly POW = 33;
	public static readonly UNDER = 34;
	public static readonly P_OPEN = 35;
	public static readonly P_CLOS = 36;
	public static readonly HEXNUM = 37;
	public static readonly OCTNUM = 38;
	public static readonly DECNUM = 39;
	public static readonly DOT = 40;
	public static readonly COMMA = 41;
	public static readonly EXCL = 42;
	public static readonly ASTRING_OPEN = 43;
	public static readonly QSTRING_OPEN = 44;
	public static readonly BSTRING_OPEN = 45;
	public static readonly ANY = 46;
	public static readonly IDENTSEP = 47;
	public static readonly IDENTNAME = 48;
	public static readonly IDENTSTRING = 49;
	public static readonly IDENTCOMMENT = 50;
	public static readonly IDENT_CLOSE = 51;
	public static readonly BSTRING_CLOSE = 52;
	public static readonly BFAO = 53;
	public static readonly BTEXT = 54;
	public static readonly QSTRING_CLOSE = 55;
	public static readonly QFAO = 56;
	public static readonly QTEXT = 57;
	public static readonly ASTRING_CLOSE = 58;
	public static readonly AFAO = 59;
	public static readonly ATEXT = 60;
	public static readonly RULE_msgContent = 0;
	public static readonly RULE_title = 1;
	public static readonly RULE_titleName = 2;
	public static readonly RULE_titleDescription = 3;
	public static readonly RULE_ident = 4;
	public static readonly RULE_identValue = 5;
	public static readonly RULE_page = 6;
	public static readonly RULE_literal = 7;
	public static readonly RULE_literalDefinition = 8;
	public static readonly RULE_literalName = 9;
	public static readonly RULE_literalValue = 10;
	public static readonly RULE_facility = 11;
	public static readonly RULE_facilityDescription = 12;
	public static readonly RULE_facilityName = 13;
	public static readonly RULE_facilityNumber = 14;
	public static readonly RULE_facilityContent = 15;
	public static readonly RULE_facilityQualifier = 16;
	public static readonly RULE_prefixQualifier = 17;
	public static readonly RULE_prefixQualifierValue = 18;
	public static readonly RULE_sharedQualifier = 19;
	public static readonly RULE_systemQualifier = 20;
	public static readonly RULE_severity = 21;
	public static readonly RULE_severityValue = 22;
	public static readonly RULE_base = 23;
	public static readonly RULE_baseNumber = 24;
	public static readonly RULE_end = 25;
	public static readonly RULE_expression = 26;
	public static readonly RULE_expressionVariable = 27;
	public static readonly RULE_number = 28;
	public static readonly RULE_sep = 29;
	public static readonly RULE_continuation = 30;
	public static readonly RULE_eolMayComment = 31;
	public static readonly RULE_message = 32;
	public static readonly RULE_messageName = 33;
	public static readonly RULE_messageQualifier = 34;
	public static readonly RULE_severityQualifier = 35;
	public static readonly RULE_faoCount = 36;
	public static readonly RULE_faoCountValue = 37;
	public static readonly RULE_identification = 38;
	public static readonly RULE_identificationValue = 39;
	public static readonly RULE_userValue = 40;
	public static readonly RULE_userValueValue = 41;
	public static readonly RULE_success = 42;
	public static readonly RULE_informational = 43;
	public static readonly RULE_warning = 44;
	public static readonly RULE_error = 45;
	public static readonly RULE_severe = 46;
	public static readonly RULE_fatal = 47;
	public static readonly RULE_messageText = 48;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"msgContent", "title", "titleName", "titleDescription", "ident", "identValue", 
		"page", "literal", "literalDefinition", "literalName", "literalValue", 
		"facility", "facilityDescription", "facilityName", "facilityNumber", "facilityContent", 
		"facilityQualifier", "prefixQualifier", "prefixQualifierValue", "sharedQualifier", 
		"systemQualifier", "severity", "severityValue", "base", "baseNumber", 
		"end", "expression", "expressionVariable", "number", "sep", "continuation", 
		"eolMayComment", "message", "messageName", "messageQualifier", "severityQualifier", 
		"faoCount", "faoCountValue", "identification", "identificationValue", 
		"userValue", "userValueValue", "success", "informational", "warning", 
		"error", "severe", "fatal", "messageText",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, "'='", "'+'", "'-'", "'*'", 
		"'/'", "'@'", "'#'", "'%'", "'^'", "'_'", "'('", "')'", undefined, undefined, 
		undefined, "'.'", "','", "'!'", undefined, undefined, "'<'", undefined, 
		undefined, undefined, undefined, undefined, undefined, "'>'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, "TITLE", "IDENT", "PAGE", "LITERAL", "FACILITY", "SEVERITY", 
		"BASE", "END", "PREFIX", "SHARED", "SYSTEM", "FAOCOUNT", "IDENTIFICATION", 
		"USERVALUE", "SUCCESS", "INFORMATIONAL", "WARNING", "ERROR", "SEVERE", 
		"FATAL", "WHITESPACE", "NEWLINE", "NAME", "NUMBER", "ASSIGN", "ADD", "SUB", 
		"MUL", "DIV", "SHIFT", "SHARP", "PERC", "POW", "UNDER", "P_OPEN", "P_CLOS", 
		"HEXNUM", "OCTNUM", "DECNUM", "DOT", "COMMA", "EXCL", "ASTRING_OPEN", 
		"QSTRING_OPEN", "BSTRING_OPEN", "ANY", "IDENTSEP", "IDENTNAME", "IDENTSTRING", 
		"IDENTCOMMENT", "IDENT_CLOSE", "BSTRING_CLOSE", "BFAO", "BTEXT", "QSTRING_CLOSE", 
		"QFAO", "QTEXT", "ASTRING_CLOSE", "AFAO", "ATEXT",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(msgParser._LITERAL_NAMES, msgParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return msgParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "msg.g4"; }

	// @Override
	public get ruleNames(): string[] { return msgParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return msgParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(msgParser._ATN, this);
	}
	// @RuleVersion(0)
	public msgContent(): MsgContentContext {
		let _localctx: MsgContentContext = new MsgContentContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, msgParser.RULE_msgContent);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 106;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (((((_la - 21)) & ~0x1F) === 0 && ((1 << (_la - 21)) & ((1 << (msgParser.WHITESPACE - 21)) | (1 << (msgParser.NEWLINE - 21)) | (1 << (msgParser.DOT - 21)) | (1 << (msgParser.EXCL - 21)))) !== 0)) {
				{
				this.state = 104;
				this._errHandler.sync(this);
				switch ( this.interpreter.adaptivePredict(this._input, 0, this._ctx) ) {
				case 1:
					{
					this.state = 98;
					this.title();
					}
					break;

				case 2:
					{
					this.state = 99;
					this.ident();
					}
					break;

				case 3:
					{
					this.state = 100;
					this.page();
					}
					break;

				case 4:
					{
					this.state = 101;
					this.literal();
					}
					break;

				case 5:
					{
					this.state = 102;
					this.facility();
					}
					break;

				case 6:
					{
					this.state = 103;
					this.eolMayComment();
					}
					break;
				}
				}
				this.state = 108;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 109;
			this.match(msgParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public title(): TitleContext {
		let _localctx: TitleContext = new TitleContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, msgParser.RULE_title);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 112;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === msgParser.WHITESPACE) {
				{
				this.state = 111;
				this.match(msgParser.WHITESPACE);
				}
			}

			this.state = 114;
			this.match(msgParser.DOT);
			this.state = 115;
			this.match(msgParser.TITLE);
			this.state = 116;
			this.match(msgParser.WHITESPACE);
			this.state = 117;
			this.titleName();
			this.state = 120;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === msgParser.WHITESPACE) {
				{
				this.state = 118;
				this.match(msgParser.WHITESPACE);
				this.state = 119;
				this.titleDescription();
				}
			}

			this.state = 122;
			this.match(msgParser.NEWLINE);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public titleName(): TitleNameContext {
		let _localctx: TitleNameContext = new TitleNameContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, msgParser.RULE_titleName);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 124;
			this.match(msgParser.NAME);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public titleDescription(): TitleDescriptionContext {
		let _localctx: TitleDescriptionContext = new TitleDescriptionContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, msgParser.RULE_titleDescription);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 129;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << msgParser.TITLE) | (1 << msgParser.IDENT) | (1 << msgParser.PAGE) | (1 << msgParser.LITERAL) | (1 << msgParser.FACILITY) | (1 << msgParser.SEVERITY) | (1 << msgParser.BASE) | (1 << msgParser.END) | (1 << msgParser.PREFIX) | (1 << msgParser.SHARED) | (1 << msgParser.SYSTEM) | (1 << msgParser.FAOCOUNT) | (1 << msgParser.IDENTIFICATION) | (1 << msgParser.USERVALUE) | (1 << msgParser.SUCCESS) | (1 << msgParser.INFORMATIONAL) | (1 << msgParser.WARNING) | (1 << msgParser.ERROR) | (1 << msgParser.SEVERE) | (1 << msgParser.FATAL) | (1 << msgParser.WHITESPACE) | (1 << msgParser.NAME) | (1 << msgParser.NUMBER) | (1 << msgParser.ASSIGN) | (1 << msgParser.ADD) | (1 << msgParser.SUB) | (1 << msgParser.MUL) | (1 << msgParser.DIV) | (1 << msgParser.SHIFT) | (1 << msgParser.SHARP))) !== 0) || ((((_la - 32)) & ~0x1F) === 0 && ((1 << (_la - 32)) & ((1 << (msgParser.PERC - 32)) | (1 << (msgParser.POW - 32)) | (1 << (msgParser.UNDER - 32)) | (1 << (msgParser.P_OPEN - 32)) | (1 << (msgParser.P_CLOS - 32)) | (1 << (msgParser.HEXNUM - 32)) | (1 << (msgParser.OCTNUM - 32)) | (1 << (msgParser.DECNUM - 32)) | (1 << (msgParser.DOT - 32)) | (1 << (msgParser.COMMA - 32)) | (1 << (msgParser.EXCL - 32)) | (1 << (msgParser.ASTRING_OPEN - 32)) | (1 << (msgParser.QSTRING_OPEN - 32)) | (1 << (msgParser.BSTRING_OPEN - 32)) | (1 << (msgParser.ANY - 32)) | (1 << (msgParser.IDENTSEP - 32)) | (1 << (msgParser.IDENTNAME - 32)) | (1 << (msgParser.IDENTSTRING - 32)) | (1 << (msgParser.IDENTCOMMENT - 32)) | (1 << (msgParser.IDENT_CLOSE - 32)) | (1 << (msgParser.BSTRING_CLOSE - 32)) | (1 << (msgParser.BFAO - 32)) | (1 << (msgParser.BTEXT - 32)) | (1 << (msgParser.QSTRING_CLOSE - 32)) | (1 << (msgParser.QFAO - 32)) | (1 << (msgParser.QTEXT - 32)) | (1 << (msgParser.ASTRING_CLOSE - 32)) | (1 << (msgParser.AFAO - 32)) | (1 << (msgParser.ATEXT - 32)))) !== 0)) {
				{
				{
				this.state = 126;
				_la = this._input.LA(1);
				if (_la <= 0 || (_la === msgParser.NEWLINE)) {
				this._errHandler.recoverInline(this);
				} else {
					if (this._input.LA(1) === Token.EOF) {
						this.matchedEOF = true;
					}

					this._errHandler.reportMatch(this);
					this.consume();
				}
				}
				}
				this.state = 131;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public ident(): IdentContext {
		let _localctx: IdentContext = new IdentContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, msgParser.RULE_ident);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 133;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === msgParser.WHITESPACE) {
				{
				this.state = 132;
				this.match(msgParser.WHITESPACE);
				}
			}

			this.state = 135;
			this.match(msgParser.DOT);
			this.state = 136;
			this.match(msgParser.IDENT);
			this.state = 137;
			this.match(msgParser.IDENTSEP);
			this.state = 141;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === msgParser.IDENTSEP) {
				{
				{
				this.state = 138;
				this.match(msgParser.IDENTSEP);
				}
				}
				this.state = 143;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 144;
			this.identValue();
			this.state = 148;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === msgParser.IDENTSEP) {
				{
				{
				this.state = 145;
				this.match(msgParser.IDENTSEP);
				}
				}
				this.state = 150;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 152;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === msgParser.IDENTCOMMENT) {
				{
				this.state = 151;
				this.match(msgParser.IDENTCOMMENT);
				}
			}

			this.state = 154;
			this.match(msgParser.IDENT_CLOSE);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public identValue(): IdentValueContext {
		let _localctx: IdentValueContext = new IdentValueContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, msgParser.RULE_identValue);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 156;
			_la = this._input.LA(1);
			if (!(_la === msgParser.IDENTNAME || _la === msgParser.IDENTSTRING)) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public page(): PageContext {
		let _localctx: PageContext = new PageContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, msgParser.RULE_page);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 159;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === msgParser.WHITESPACE) {
				{
				this.state = 158;
				this.match(msgParser.WHITESPACE);
				}
			}

			this.state = 161;
			this.match(msgParser.DOT);
			this.state = 162;
			this.match(msgParser.PAGE);
			this.state = 163;
			this.eolMayComment();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public literal(): LiteralContext {
		let _localctx: LiteralContext = new LiteralContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, msgParser.RULE_literal);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 166;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === msgParser.WHITESPACE) {
				{
				this.state = 165;
				this.match(msgParser.WHITESPACE);
				}
			}

			this.state = 168;
			this.match(msgParser.DOT);
			this.state = 169;
			this.match(msgParser.LITERAL);
			this.state = 170;
			this.sep();
			this.state = 171;
			this.literalDefinition();
			this.state = 182;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 13, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					{
					{
					this.state = 173;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
					if (_la === msgParser.WHITESPACE || _la === msgParser.SUB) {
						{
						this.state = 172;
						this.sep();
						}
					}

					this.state = 175;
					this.match(msgParser.COMMA);
					this.state = 177;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
					if (_la === msgParser.WHITESPACE || _la === msgParser.SUB) {
						{
						this.state = 176;
						this.sep();
						}
					}

					this.state = 179;
					this.literalDefinition();
					}
					}
				}
				this.state = 184;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 13, this._ctx);
			}
			this.state = 185;
			this.eolMayComment();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public literalDefinition(): LiteralDefinitionContext {
		let _localctx: LiteralDefinitionContext = new LiteralDefinitionContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, msgParser.RULE_literalDefinition);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 187;
			this.literalName();
			this.state = 196;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 16, this._ctx) ) {
			case 1:
				{
				this.state = 189;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === msgParser.WHITESPACE || _la === msgParser.SUB) {
					{
					this.state = 188;
					this.sep();
					}
				}

				this.state = 191;
				this.match(msgParser.ASSIGN);
				this.state = 193;
				this._errHandler.sync(this);
				switch ( this.interpreter.adaptivePredict(this._input, 15, this._ctx) ) {
				case 1:
					{
					this.state = 192;
					this.sep();
					}
					break;
				}
				this.state = 195;
				this.literalValue();
				}
				break;
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public literalName(): LiteralNameContext {
		let _localctx: LiteralNameContext = new LiteralNameContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, msgParser.RULE_literalName);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 198;
			this.match(msgParser.NAME);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public literalValue(): LiteralValueContext {
		let _localctx: LiteralValueContext = new LiteralValueContext(this._ctx, this.state);
		this.enterRule(_localctx, 20, msgParser.RULE_literalValue);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 200;
			this.expression(0);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public facility(): FacilityContext {
		let _localctx: FacilityContext = new FacilityContext(this._ctx, this.state);
		this.enterRule(_localctx, 22, msgParser.RULE_facility);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 203;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === msgParser.WHITESPACE) {
				{
				this.state = 202;
				this.match(msgParser.WHITESPACE);
				}
			}
